--- a/app_server/views/mekan-detay.pug
+++ b/app_server/views/mekan-detay.pug
@@ -1,9 +1,10 @@
 extends layout
+include ortak_fonksiyonlar/fonksiyonlar
 block content
   .row.page-header
     .col-lg-12
       //Mekanın adı
-      h1 Starbucks
+      h1=sayfaBaslik
   .row
     //Responsive yap
     .col-xs-12.col-md-12
@@ -11,39 +12,29 @@ block content
         .col-xs-12.col-sm-6
           //Yıldızları ekle
           p.rating
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star
-            span.glyphicon.glyphicon-star-empty
+            +puanOlustur(mekanBilgisi.puan)
           //Mekanın adresi
-          p Centrum Garden AVM
+          p=mekanBilgisi.adres
           .panel.panel-primary
             .panel-heading
               h2.panel-title Açılış Saatleri
             .panel-body
-                p
-                  | Pazartesi-Cuma: 7:00-23:00
-                p
-                  | Cumartesi: 8:00-22:00
-                p
-                  | Pazar: Kapalı
+                each saat in mekanBilgisi.saatler
+                    p
+                       |#{saat.gunler}:
+                       if(saat.kapali)
+                           |kapali
+                       else
+                           |#{saat.acilis}-#{saat.kapanis}
           .panel.panel-primary
             .panel-heading
               h2.panel-title Neler Var
             .panel-body
-                span.label.label-warning
-                  span.glyphicon.glyphicon-ok
-                  | &nbsp; Dünya Kahveleri
-                | &nbsp;
-                span.label.label-warning
-                  span.glyphicon.glyphicon-ok
-                  | &nbsp; Kekler
-                | &nbsp;
-                span.label.label-warning
-                  span.glyphicon.glyphicon-ok
-                  | &nbsp; Pastalar
-                | &nbsp;
+                each imkan in mekanBilgisi.imkanlar
+                    span.label.label-warning
+                      span.glyphicon.glyphicon-ok
+                      | &nbsp;#{imkan}
+                    | &nbsp;
         //Haritayı ekleme işlemi
         .col-xs-12.col-sm-6.location-map
           .panel.panel-primary
