--- a/app_server/views/mekanlar-liste.pug
+++ b/app_server/views/mekanlar-liste.pug
@@ -1,183 +1,29 @@
 extends layout
+include ortak_fonksiyonlar/fonksiyonlar
 block content
   //Başlık bölümündeki bilgileri ayarlaya
   #banner.page-header
     //satır oluştur
     .row
       .col-lg-6
-        h1
-          |Mekan32
-          small &nbsp;Isparta civarındaki mekanları keşfedin!
+        h1=sayfaBaslik.siteAd
+          small &nbsp;#{sayfaBaslik.aciklama}
   .row
     //mobil uyumlu listeleme
     .col-xs-12.col-sm-12
       //Liste grubu oluştur
-      .row.list-group
-       //Listeye öğe ekleme. Birden fazla eleman ekliycekseniz
-       //aşağıdaki kodu kopyalayın ve yapıştırın
-       .col-xs-12.list-group-item
-           //Linklerin, yıldızların ve adresin oluşturulması
-           h4
-             a(href='/mekan/') Gloria Jeans
-             small &nbsp;
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star-empty
-             span.glyphicon.glyphicon-star-empty
-           span.badge.pull-right.badge-default 10km
-           p.address sparta AVM
-           p
-              span.label.label-warning Dünya Kahveleri
-              | &nbsp;
-              span.label.label-warning Kekler
-              | &nbsp;
-              span.label.label-warning Pastalar
-              | &nbsp;            
+      each mekan in mekanlar
+          .row.list-group
+           .col-xs-12.list-group-item
+               //Linklerin, yıldızların ve adresin oluşturulması
+               h4
+                 a(href='/mekan/')=mekan.ad
+                 small &nbsp;
+                 +puanOlustur(mekan.puan)
+               span.badge.pull-right.badge-default=mekan.mesafe
+               p.address=mekan.adres
+               p
+                  each imkan in mekan.imkanlar
+                    span.label.label-warning=imkan
+                    | &nbsp;
     .col-xs-12.col-sm-4
-
-  .row
-    //mobil uyumlu listeleme
-    .col-xs-12.col-sm-12
-      //Liste grubu oluştur
-      .row.list-group
-       //Listeye öğe ekleme. Birden fazla eleman ekliycekseniz
-       //aşağıdaki kodu kopyalayın ve yapıştırın
-       .col-xs-12.list-group-item
-           //Linklerin, yıldızların ve adresin oluşturulması
-           h4
-             a(href='/mekan/') Mcdonalds
-             small &nbsp;
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star-empty
-             span.glyphicon.glyphicon-star-empty
-           span.badge.pull-right.badge-default 10km
-           p.address Alanyum aVM
-           p
-              span.label.label-warning Dünya Kahveleri
-              | &nbsp;
-              span.label.label-warning Kekler
-              | &nbsp;
-              span.label.label-warning Pastalar
-              | &nbsp;            
-    .col-xs-12.col-sm-4
-
-    
-  .row
-    //mobil uyumlu listeleme
-    .col-xs-12.col-sm-12
-      //Liste grubu oluştur
-      .row.list-group
-       //Listeye öğe ekleme. Birden fazla eleman ekliycekseniz
-       //aşağıdaki kodu kopyalayın ve yapıştırın
-       .col-xs-12.list-group-item
-           //Linklerin, yıldızların ve adresin oluşturulması
-           h4
-             a(href='/mekan/') KahveDunyasi
-             small &nbsp;
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star-empty
-           span.badge.pull-right.badge-default 10km
-           p.address Antalya AVM
-           p
-              span.label.label-warning Dünya Kahveleri
-              | &nbsp;
-              span.label.label-warning Kekler
-              | &nbsp;
-              span.label.label-warning Pastalar
-              | &nbsp;            
-    .col-xs-12.col-sm-4
-
-    
-  .row
-    //mobil uyumlu listeleme
-    .col-xs-12.col-sm-12
-      //Liste grubu oluştur
-      .row.list-group
-       //Listeye öğe ekleme. Birden fazla eleman ekliycekseniz
-       //aşağıdaki kodu kopyalayın ve yapıştırın
-       .col-xs-12.list-group-item
-           //Linklerin, yıldızların ve adresin oluşturulması
-           h4
-             a(href='/mekan/') Burger King
-             small &nbsp;
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star-empty
-           span.badge.pull-right.badge-default 10km
-           p.address Izmir AVM
-           p
-              span.label.label-warning Dünya Kahveleri
-              | &nbsp;
-              span.label.label-warning Kekler
-              | &nbsp;
-              span.label.label-warning Pastalar
-              | &nbsp;            
-    .col-xs-12.col-sm-4
-
-    
-  .row
-    //mobil uyumlu listeleme
-    .col-xs-12.col-sm-12
-      //Liste grubu oluştur
-      .row.list-group
-       //Listeye öğe ekleme. Birden fazla eleman ekliycekseniz
-       //aşağıdaki kodu kopyalayın ve yapıştırın
-       .col-xs-12.list-group-item
-           //Linklerin, yıldızların ve adresin oluşturulması
-           h4
-             a(href='/mekan/') Kofteci Yusuf
-             small &nbsp;
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star-empty
-           span.badge.pull-right.badge-default 10km
-           p.address Istanbul AVM
-           p
-              span.label.label-warning Dünya Kahveleri
-              | &nbsp;
-              span.label.label-warning Kekler
-              | &nbsp;
-              span.label.label-warning Pastalar
-              | &nbsp;            
-    .col-xs-12.col-sm-4
-
-    
-  .row
-    //mobil uyumlu listeleme
-    .col-xs-12.col-sm-12
-      //Liste grubu oluştur
-      .row.list-group
-       //Listeye öğe ekleme. Birden fazla eleman ekliycekseniz
-       //aşağıdaki kodu kopyalayın ve yapıştırın
-       .col-xs-12.list-group-item
-           //Linklerin, yıldızların ve adresin oluşturulması
-           h4
-             a(href='/mekan/') HD iskander
-             small &nbsp;
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star
-             span.glyphicon.glyphicon-star-empty
-           span.badge.pull-right.badge-default 10km
-           p.address Ankara AVM
-           p
-              span.label.label-warning Dünya Kahveleri
-              | &nbsp;
-              span.label.label-warning Kekler
-              | &nbsp;
-              span.label.label-warning Pastalar
-              | &nbsp;            
-    .col-xs-12.col-sm-4
-
-    
